--- a/index.html
+++ b/index.html
@@ -4,35 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner"> </div>
-    <link rel="stylesheet" href="style.css">
-
-    <div class="box1" >
-        <div id="links1" ><a href="#">Nike.com</a></div>
-        <div id="links1" ><a href="#">Link B</a></div>
-        <div id="links1" ><a href="#">Link c</a></div>
-    </div>
-
-    <div class="box2">
-        <div id="links2" ><a href="#">Nike.com</a></div>
-        <div id="links2" ><a href="#">Link B</a></div>
-        <div id="links2" ><a href="#">Link c</a></div>
-    </div>
-
-    <div class="body">
-        <div class="center"></div>
-        <h1>HEADING</h1>
-        <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</b></p>
-        <p><b>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b></p>
-    </div>
-<div id="Imgs1">
-<img src="Images/2bron.jpg"  style="display: inline-block; margin-left: auto; margin-right: auto;">
-<img src="Images/2bron.jpg" style="display: inline-block; margin-left: auto; margin-right: auto;">
+    <div class="menubar">
+<div class="prodname">
+    Lebron James
 </div>
+<div class="menulinks">
+    <a href="https://www.nike.com/t/lebron-xxi-freshwater-basketball-shoes-lnQSsH/FV2345-001">Lebron Shoes</a>
+    <a href="https://www.nba.com/player/2544/lebron-james">Lebron NBA</a>
+    <a href="https://en.wikipedia.org/wiki/LeBron_James">Lebron Wikipedia</a>
+    <a href="https://www.instagram.com/kingjames/?hl=en">Lebron IG</a>
+</div>
+    </div>
+    <div class="body">
+        <div class="leftlinks">
+<a href="https://www.youtube.com/watch?v=b117a8_jALE">🏀🧺</a>
+<br>
+<a href="https://youtu.be/Rcuf28mqhkA?si=4Z76w0bfTzt5_4Kp">🐐🐐🐐</a>
+<br>
+<a href="https://static.wikia.nocookie.net/b2c4b50b-4a2c-4b7e-b900-03b8b9d908af/scale-to-width/755">???</a>
+<br>
+<a href="https://www.si.com/.image/ar_4:3%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTk3MTkzMTIxMTExNDgzNDc1/lebron-james.jpg">🥶🥶🥶</a>
+        </div>
+        <div class="bodytext">
+            <h1>
+                The King. The GOAT. Lebron James. 
+            </h1>
+            <p>
+                Lebron James is a professional Basketball forward for the Los Angeles Lakers <br>
+                Billed at 2.06 m tall, 113 kg, Lebron is a freak of nature.<br> He is known for his immense atheleticism,<br>
+                which was a contributing factor to him being selected first overall in the 2003 nba draft.<br>
+                He is also known for his longevity as he is still considered a top 10 player in the league today, even at
+                38 years of age.<br> So if you need a professional baller 😎, then look no further than <span class="bronbron">LEBRON JAMES</span><br><br>
+                Lebron also has many accolades such as: <br>
+                4× NBA champion (2012, 2013, 2016, 2020) <br>
+                4× NBA Finals MVP (2012, 2013, 2016, 2020)<br>
+                4× NBA Most Valuable Player (2009, 2010, 2012, 2013)<br>
+                19× NBA All-Star (2005–2023)<br>
+                3× NBA All-Star Game MVP (2006, 2008, 2018)<br>
+                13× All-NBA First Team (2006, 2008–2018, 2020)<br>
+                NBA All Time Scoring Leader<br>
+                and many more...
+            </p>
+        </div>
+        <div class="rightbox">
+            <div class="prodpic">
+                <img title="LeGOAT" src="Images/poster.jpg" alt="">
+            </div>
+            <div class="righttext">
+                Pictured above is the GOAT Lebron James, <br>
+                 performing a reverse windmill dunk in the year 2020 <br>
+                in a home game against the Houston Rockets. <br>
+                 This dunk was actually a tribute to another Lakers legend,<br>
+                  Kobe Bryant, who died the same year. <br>
+                  The same year, Lebron won the NBA championship, <br>
+                  which got him his 4th ring and 4th finals MVP, <br>
+                  and the 17th overall championship for the Lakers. <br>
+                 (This photograph was taken by NBA photographer Andrew Bernstein.)<br>
+            </div>
 
+        </div>
+    </div>
 </body>
 </html>
